Updated starhole code to be run
Also some changes on HS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.10.1_SDSS-S82-IAC.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.10.1_SDSS-S82-IAC.ipynb
@@ -5,13 +5,15 @@
    "metadata": {},
    "source": [
     "# Herschel Stripe 82 master catalogue\n",
-    "## Preparation of SDSS Stripe 82 - IAC Legac data\n",
+    "## Preparation of SDSS Stripe 82 - IAC Legacy Survey data\n",
     "\n",
-    "This catalogue comes from `dmu0_SDSS-S82`.\n",
+    "This catalogue comes from `dmu0_IAC_Stripe82_Legacy_Project`.\n",
+    "\n",
+    "One must choose between this catalogue and the official SDSS catalogue in 'dmu0_SDSS-S82'. Currently we choose this one.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
-    "- The `object_id` as unique object identifier;\n",
+    "- We generate a unique object identifier;\n",
     "- The position;\n",
     "- The u, g, r, i, z, aperture magnitude (for now in 3”);\n",
     "- The u, g, r, i, z, auto fluxes and magnitudes.\n",
@@ -138,7 +140,7 @@
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
     "\n",
-    "catalogue.add_column(Column(data=np.arange(len(catalogue)), name='sdss_id', dtype=float))\n",
+    "catalogue.add_column(Column(data=np.arange(len(catalogue)), name='sdss_id', dtype=int))\n",
     "    \n",
     "epoch = 2013\n",
     "\n",
