Herschel-Stripe-82 ready to run on Vulcain
writing to 490 sub catalogues to be concatenated with stilts #15

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_Merging_low_memory.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_Merging_low_memory.ipynb
@@ -768,7 +768,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hsc_moc = MOC(filename=\"../../dmu0/dmu0_HSC/data/HSC-PDR1_deep_Herschel-Stripe-82_MOC.fits\")\n",
@@ -1131,7 +1133,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n=0\n",
@@ -1202,7 +1206,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "    sub_catalogue.write(\"{}/sub_catalogue_herschel-stripe-82{}_{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
+    "    sub_catalogue.write(\"{}/sub_catalogue_herschel-stripe-82{}{}.fits\".format(OUT_DIR, SUFFIX, n), overwrite=True)\n",
     "    n += 1"
    ]
   }
