--- a/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
@@ -2400,12 +2400,15 @@
     "                               'f_ap_uds_j','ferr_ap_uds_j','m_ap_uds_j','merr_ap_uds_j',\n",
     "                               'f_ap_uds_k','ferr_ap_uds_k','m_ap_uds_k','merr_ap_uds_k'])\n",
     "\n",
-    "\n",
     "ukidss_origin = Table()\n",
     "ukidss_origin.add_column(master_catalogue['help_id'])\n",
+    "\n",
+    "origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
     "origin[has_uds_k] = \"UDS\"\n",
     "origin[has_ukidss_k] = \"DXS\"\n",
+    "\n",
     "ukidss_origin.add_column(Column(data=origin, name= 'f_ukidss_k' ))\n",
+    "\n",
     "origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
     "origin[has_uds_j] = \"UDS\"\n",
     "origin[has_ukidss_j] = \"DXS\"\n",
