--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.1_IRAC_merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.1_IRAC_merging.ipynb
@@ -366,6 +366,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## VIII - Cross-identification table\n",
+    "\n",
+    "We are producing a table associating to each HELP identifier, the identifiers of the sources in the pristine catalogue. This can be used to easily get additional information from them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue.add_column(Column(data=(np.char.array(master_catalogue['shela_intid'].astype(str)) \n",
+    "                                    +  np.char.array(master_catalogue['spies_intid'].astype(str) )), \n",
+    "                              name=\"irac_intid\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['shela_intid', 'spies_intid', 'irac_intid']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "id_names = []\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if '_id' in col:\n",
+    "        id_names += [col]\n",
+    "    if '_intid' in col:\n",
+    "        id_names += [col]\n",
+    "        \n",
+    "print(id_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#master_catalogue[id_names].write(\n",
+    "#    \"{}/master_list_irac_cross_ident_herschel-stripe-82{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
+    "\n",
+    "#Lets leave the shela and spies ids in so that the final cross ident table is complete\n",
+    "#master_catalogue.remove_columns(['shela_intid', 'spies_intid'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## VI - Choosing between multiple values for the same filter\n",
     "\n",
     "Both SHELA and SpIES provide IRAC1 and IRAC2 fluxes. SpIES seems to go deeper and neither apear to suffer from the bright drop off that affects both SERVS and SWIRE."
@@ -459,10 +521,13 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "irac_origin = Table()\n"
+    "irac_origin = Table()\n",
+    "irac_origin.add_column(master_catalogue['irac_intid'])"
    ]
   },
   {
@@ -752,64 +817,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VIII - Cross-identification table\n",
-    "\n",
-    "We are producing a table associating to each HELP identifier, the identifiers of the sources in the pristine catalogue. This can be used to easily get additional information from them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "master_catalogue.add_column(Column(data=(np.char.array(master_catalogue['shela_intid'].astype(str)) \n",
-    "                                    +  np.char.array(master_catalogue['spies_intid'].astype(str) )), \n",
-    "                              name=\"irac_intid\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['shela_intid', 'spies_intid', 'irac_intid']\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "id_names = []\n",
-    "for col in master_catalogue.colnames:\n",
-    "    if '_id' in col:\n",
-    "        id_names += [col]\n",
-    "    if '_intid' in col:\n",
-    "        id_names += [col]\n",
-    "        \n",
-    "print(id_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#master_catalogue[id_names].write(\n",
-    "#    \"{}/master_list_irac_cross_ident_herschel-stripe-82{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
-    "\n",
-    "#Lets leave the shela and spies ids in so that the final cross ident table is complete\n",
-    "#master_catalogue.remove_columns(['shela_intid', 'spies_intid'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## IX - Saving the catalogue"
    ]
   },
@@ -989,7 +996,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue[columns].write(\"{}/IRAC.fits\".format(TMP_DIR, SUFFIX), overwrite=True)"
